<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mapf_pathplanner_cbs</name>
  <version>0.0.1</version>
  <description>CBS Path Planner with ROS2 Interface</description>
  <maintainer email="orchan.heupel@rwth-aachen.de">orhan</maintainer>
  <license>Look for the file license.md</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
